--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "babel-plugin-inline-import": "^3.0.0",
+    "drizzle-kit": "^0.22.7",
+    "drizzle-orm": "^0.31.2",
     "expo": "~51.0.14",
+    "expo-sqlite": "~14.0.3",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.2"
